<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.menutest.MainActivity" >

    <item
        android:id="@+id/basic"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/basic"/>
    
    <item 
        android:id="@+id/basic_mask" 
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/basic_mask"/>
    
    <item
        android:id="@+id/threshold"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/threshold"/>
    
    <item
        android:id="@+id/adaptive_threshold_mean"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/adaptive_threshold_mean"/>  
    
    <item 
        android:id="@+id/adaptive_threshold_meanC"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/adaptive_threshold_meanC"/>
    
    <item 
        android:id="@+id/adaptive_threshold_median" 
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/adaptive_threshold_median"/>
    
    <item 
        android:id="@+id/adaptive_threshold_minMax" 
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/adaptive_threshold_minMax"/>
    
    <item 
        android:id="@+id/adaptive_threshold_meanC_textures"
        android:orderInCategory="100"
        android:showAsAction="never" 
        android:title="@string/adaptive_threshold_meanC_textures"/>
    
    
        
    <item
        android:id="@+id/bitwise_and"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/bitwise_and"/>  
    
    <item
        android:id="@+id/bitwise_or"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/bitwise_or"/> 
            
    <item
        android:id="@+id/bitwise_xor"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/bitwise_xor"/>      
    
    <item
        android:id="@+id/bitwise_not"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/bitwise_not"/>  
        
    <item
        android:id="@+id/bitwise_nand"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/bitwise_nand"/>  
        
    <item 
        android:id="@+id/bitwise_nor" 
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/bitwise_nor"/>
         
    <item
        android:id="@+id/dilation"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/dilation"/>  
        
    <item
        android:id="@+id/erosion"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/erosion"/>
    
    <item 
        android:id="@+id/opening" 
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/opening"/>
    
    <item 
        android:id="@+id/closing" 
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/closing"/>  
    
    <item
        android:id="@+id/mean_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/mean_filter"/>  
        
    <item
        android:id="@+id/median_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/median_filter"/>
    
    <item
        android:id="@+id/gaussian_filter"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/gaussian_filter"/>
    
    <item android:id="@+id/gaussian_filter_sep" 
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/gaussian_filter_sep"/>

</menu>
